# experiments

./: .gitignore  .gitmodules  CBenchmarks.cs  CsharpBenchmarks.cs  JavaBenchmark.cs  copy-to-server.sh  copy.sh  experiments.csproj  ranking.ods  ranking.xlsx
RAPLRust/: Dockerfile  build-results.py  docker-compose.yml  measure.sh  optimizations.sh  pyproject.toml
RAPLRust/lib/rapl-interface/: Cargo.toml  runBench.sh
RAPLRust/no-warmup/results/: normalized.csv  script0.py  script1.py
RAPLRust/no-warmup/results (host_turbo-disabled) 30/: script0.py  script2.py
RAPLRust/no-warmup/results (host_turbo-enabled) 5/: normalized.csv  pyproject.toml
RAPLRust/no-warmup/results (turbo boost disabled) 30/: normalized.csv
RAPLRust/no-warmup/results (turbo boost disabled) 5/: normalized.csv  script1.py
RAPLRust/no-warmup/results-14.10.2024/: normalized.csv  script0.py  script1.py  script2.py
RAPLRust/no-warmup/src/: compile.sh  measure.sh  run.sh
RAPLRust/src/C/: Makefile  no-warmup.mk
RAPLRust/src/C#/: Makefile  warmup.mk
RAPLRust/src/C++/: Makefile
RAPLRust/src/Java/: Makefile  no-warmup.mk  warmup.mk
RAPLRust/src/Rust/: Makefile
RAPLRust/warmup/results/: normalized.csv  script0.py  script1.py
RAPLRust/warmup/results (host_optimizations-enabled) 45/: cache.py  normalized.csv  script0.py
RAPLRust/warmup/results (turbo boost disabled) 45/: normalized.csv  script1.py  script2.py
RAPLRust/warmup/results (turbo boost disabled) 5/: normalized.csv  script1.py  script2.py
RAPLRust/warmup/results (turbo boost enabled) 5/: normalized.csv  pyproject.toml
RAPLRust/warmup/results-14.10.2024/: normalized.csv  script0.py  script1.py  script2.py
Scripts/: normalize_results.py  pyproject.toml
(+4462 files in other folders)
