[tool.poetry]
name = "raplrust"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tdqm = "^0.0.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
