[tool.poetry]
name = "tables"
version = "0.1.0"
description = ""
authors = ["Dragoshel <tools@ionescudragos.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
